--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>testimonials-grid-section-main</title>
     <!-- render all elements in all browsers -->
-    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="CSS/normalize.css">
     <!-- css file -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="CSS/style.css">
     <!-- Fav icon -->
-    <link rel="shortcut icon" href="media/favicon-32x32.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
